feat!: BEM implementation

--- a/Product Preview Card Component/index.html
+++ b/Product Preview Card Component/index.html
@@ -5,37 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Product preview card component</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 
+  <title>Frontend Mentor | Product preview card component</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  <div role="main" class="display">
-    <div role="region" class="card">
-      <img class="img-div img-mobile" src="images/image-product-mobile.jpg" alt="Gabrielle chanel gold parfum near green leafs"/>
-      <img class="img-div img-desktop" src="images/image-product-desktop.jpg" alt="Gabrielle chanel gold parfum near green leafs"/>
-      <div role="contentinfo" class="card-text-content">
-        <p class="card-prod-type">PERFUME</p>
-        <h1 class="card-title">Gabrielle Essence Eau De Parfum</h1> 
-        <p class="card-desc">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+  <div role="main" class="component">
+    <div role="region" class="card | fs-600 lh-500">
+      <picture class="card__picture">
+        <source media="(max-width: 640px)" srcset="images/image-product-mobile.jpg">
+        <img src="images/image-product-desktop.jpg" alt="Gabrielle chanel gold parfum near green leafs"/>
+      </picture>
+      
+      <div role="contentinfo" class="card__content | bg-white">
+        <p class="card__type | clr-neutral-400 fs-500">PERFUME</p>
+        <h2 class="card__title | clr-neutral-600 fs-800 font-secondary lh-400">Gabrielle Essence Eau De Parfum</h2> 
+        <p class="card__desc | clr-neutral-400">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.</p>
-        <div role="contentinfo" class="card-prices">
-          <span class="card-price-dic">$149.99</span>
-          <span class="card-price-basic">$169.99</span>
+        <div role="contentinfo" class="card__prices">
+          <span class="price__disc | clr-secondary font-secondary fs-800 fw-700 lh-400">$149.99</span>
+          <span class="price__standard | clr-neutral-400">$169.99</span>
         </div>
-        <button class="card-btn-cart"><img src="images/icon-cart.svg" alt="cart image">Add to Cart</button>
+        <button class="card__cta-btn | bg-secondary clr-white">
+          <svg class="cta__icon" width="15" height="16" xmlns="http://www.w3.org/2000/svg">
+            <path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"></path>
+          </svg>
+          <span class="cta__text | fs-600 fw-700">Add to Cart</span></button>
       </div>
     </div>
-  </div>
-  <div role="footer" class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Mateusz Hanak</a>.
   </div>
 </body>
 </html>
