--- a/Single Page Design Portfolio/index.html
+++ b/Single Page Design Portfolio/index.html
@@ -1,46 +1,383 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single-page design portfolio</title>
-  <link rel="stylesheet" href="dist/style.css">
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  Free Consultation
+    <title>Frontend Mentor | Single-page design portfolio</title>
 
-  Design solutions made easy
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
 
-  With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
+    <link rel="stylesheet" href="dist/main.css" />
+  </head>
+  <body class="body | bg-clr-beige fw-500">
+    <header class="header | container flex">
+      <div class="header__content-top flex">
+        <svg
+          class="logo"
+          width="64"
+          height="64"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g fill="none" fill-rule="evenodd">
+            <path fill="#030303" d="M0 0h64v64H0z" />
+            <circle stroke="#FFF7F0" stroke-width="4" cx="32" cy="32" r="14" />
+          </g>
+        </svg>
+        <a href="#" class="btn-cta | btn-primary btn-primary--black">
+          Free consultation
+        </a>
+      </div>
+      <div class="slogan center">
+        <h1 class="slogan__title | fs-900 fw-700">
+          Design solutions made easy
+        </h1>
+        <p class="slogan__text | text-clr-grey fw-500">
+          With over ten years of experience in various design disciplines, I’m
+          your one-stop shop for your design needs.
+        </p>
+      </div>
+    </header>
 
-  Graphic Design
-  UI/UX
-  Apps
-  Photography
-  Illustrations
-  Motion Graphics
+    <main class="main | flow">
+      <section class="section-services | container grid grid--services">
+        <div class="card card--1 | bg-clr-purple grid">
+          <svg
+            class="card__pattern"
+            width="128"
+            height="192"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g fill="none" fill-rule="evenodd">
+              <path fill="#552049" d="M0 0h64v128H0z" />
+              <circle
+                stroke="#FFF7F0"
+                stroke-width="4"
+                cx="32"
+                cy="32"
+                r="14"
+              />
+              <g transform="translate(32 32)">
+                <rect fill="#F6A560" x="32" width="64" height="32" rx="16" />
+                <path fill="#61C4B7" d="m0 128 32 32v-32zM32 96l32 32V96z" />
+                <circle
+                  stroke="#FFF7F0"
+                  stroke-width="4"
+                  cx="80"
+                  cy="16"
+                  r="14"
+                />
+                <circle
+                  stroke="#FFF7F0"
+                  stroke-width="4"
+                  cx="80"
+                  cy="16"
+                  r="14"
+                />
+              </g>
+              <g fill="#030303">
+                <path d="M64 14h4v4h-4zM68 14h4v4h-4zM92 14h4v4h-4z" />
+              </g>
+              <path fill="#755CDE" d="m96 0 32 32V0z" />
+              <g fill="#030303">
+                <path d="M96 14h4v4h-4zM120 14h4v4h-4zM124 14h4v4h-4z" />
+              </g>
+              <circle
+                stroke="#030303"
+                stroke-width="4"
+                cx="80"
+                cy="80"
+                r="14"
+              />
+              <path fill="#EB7565" d="M96 64h32v32H96z" />
+              <path fill="#FFF7F0" d="m32 96 96 96V96z" />
+              <g fill="#030303">
+                <path
+                  d="M0 128h4v4H0zM14 128h4v4h-4zM28 128h4v4h-4zM0 142h4v4H0zM14 142h4v4h-4zM28 142h4v4h-4z"
+                />
+                <g><path d="M0 156h4v4H0zM14 156h4v4h-4zM28 156h4v4h-4z" /></g>
+              </g>
+            </g>
+          </svg>
+          <span class="card__title | text-clr-white fw-700 fs-600"
+            >Graphic Design</span
+          >
+        </div>
+        <div class="card card--2 | bg-clr-yellow grid">
+          <svg
+            class="card__pattern"
+            width="64"
+            height="64"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g fill="none" fill-rule="evenodd">
+              <circle
+                stroke="#030303"
+                stroke-width="4"
+                cx="48"
+                cy="16"
+                r="14"
+              />
+              <path fill="#EB7565" d="M0 0h32v32H0z" />
+              <g fill="#030303">
+                <path
+                  d="M0 32h4v4H0zM14 32h4v4h-4zM28 32h4v4h-4zM0 46h4v4H0zM14 46h4v4h-4zM28 46h4v4h-4z"
+                />
+                <g><path d="M0 60h4v4H0zM14 60h4v4h-4zM28 60h4v4h-4z" /></g>
+              </g>
+              <path fill="#FFF7F0" d="m32 32 32 32V32z" />
+            </g>
+          </svg>
+          <span class="card__title | text-clr-white fw-700 fs-600">UI/UX</span>
+        </div>
+        <div class="card card--3 | bg-clr-pink grid">
+          <svg
+            class="card__pattern"
+            width="64"
+            height="64"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g fill="none" fill-rule="evenodd">
+              <g transform="translate(0 32)">
+                <rect fill="#552049" width="64" height="32" rx="16" />
+                <circle
+                  stroke="#FFF7F0"
+                  stroke-width="4"
+                  cx="48"
+                  cy="16"
+                  r="14"
+                />
+              </g>
+              <g fill="#030303">
+                <path d="M0 14h4v4H0zM4 14h4v4H4zM28 14h4v4h-4z" />
+              </g>
+              <path fill="#755CDE" d="m32 0 32 32V0z" />
+              <g fill="#030303">
+                <path d="M32 14h4v4h-4zM56 14h4v4h-4zM60 14h4v4h-4z" />
+              </g>
+            </g>
+          </svg>
+          <span class="card__title | text-clr-white fw-700 fs-600">Apps</span>
+        </div>
+        <div class="card card--4 | bg-clr-red grid">
+          <svg
+            class="card__pattern"
+            width="128"
+            height="64"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g fill="none" fill-rule="evenodd">
+              <g transform="translate(64)">
+                <circle
+                  stroke="#FFF7F0"
+                  stroke-width="4"
+                  cx="48"
+                  cy="16"
+                  r="14"
+                />
+                <path fill="#755CDE" d="M0 0h32v32H0z" />
+                <g fill="#030303">
+                  <path
+                    d="M32 32h4v4h-4zM46 32h4v4h-4zM60 32h4v4h-4zM32 46h4v4h-4zM46 46h4v4h-4zM60 46h4v4h-4z"
+                  />
+                  <g><path d="M32 60h4v4h-4zM46 60h4v4h-4zM60 60h4v4h-4z" /></g>
+                </g>
+                <path fill="#F39E9E" d="m0 32 32 32V32z" />
+              </g>
+              <g fill="#030303">
+                <path
+                  d="M32 32h4v4h-4zM46 32h4v4h-4zM60 32h4v4h-4zM32 56h4v4h-4zM46 56h4v4h-4zM60 56h4v4h-4z"
+                />
+                <g><path d="M32 60h4v4h-4zM46 60h4v4h-4zM60 60h4v4h-4z" /></g>
+              </g>
+              <g fill="#030303">
+                <path
+                  d="M32 0h4v4h-4zM46 0h4v4h-4zM60 0h4v4h-4zM32 4h4v4h-4zM46 4h4v4h-4zM60 4h4v4h-4z"
+                />
+                <g><path d="M32 28h4v4h-4zM46 28h4v4h-4zM60 28h4v4h-4z" /></g>
+              </g>
+              <path fill="#61C4B7" d="m0 32 32 32V32z" />
+              <path fill="#FFF7F0" d="M32 0 0 32V0z" />
+            </g>
+          </svg>
+          <span class="card__title | text-clr-white fw-700 fs-600"
+            >Illustrations</span
+          >
+        </div>
+        <div class="card card--5 | bg-clr-cyan grid">
+          <svg
+            class="card__pattern"
+            width="160"
+            height="64"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g fill="none" fill-rule="evenodd">
+              <path fill="#EB7565" d="M32 0h64v64H32z" />
+              <circle
+                stroke="#030303"
+                stroke-width="4"
+                cx="16"
+                cy="16"
+                r="14"
+              />
+              <circle
+                stroke="#FFF7F0"
+                stroke-width="4"
+                cx="64"
+                cy="32"
+                r="14"
+              />
+              <g fill="#030303">
+                <path
+                  d="M128 32h4v4h-4zM142 32h4v4h-4zM156 32h4v4h-4zM128 56h4v4h-4zM142 56h4v4h-4zM156 56h4v4h-4z"
+                />
+                <g>
+                  <path d="M128 60h4v4h-4zM142 60h4v4h-4zM156 60h4v4h-4z" />
+                </g>
+              </g>
+              <g fill="#030303">
+                <path
+                  d="M128 0h4v4h-4zM142 0h4v4h-4zM156 0h4v4h-4zM128 4h4v4h-4zM142 4h4v4h-4zM156 4h4v4h-4z"
+                />
+                <g>
+                  <path d="M128 28h4v4h-4zM142 28h4v4h-4zM156 28h4v4h-4z" />
+                </g>
+              </g>
+              <path fill="#FFF7F0" d="m96 32 32 32V32z" />
+              <path fill="#552049" d="m96 32 32 32V32z" />
+              <path fill="#F39E9E" d="M32 64 0 32v32z" />
+              <path fill="#FFF7F0" d="m96 32 32-32v32z" />
+            </g>
+          </svg>
+          <span class="card__title | text-clr-white fw-700 fs-600"
+            >Photography</span
+          >
+        </div>
+        <div class="card card--6 | bg-clr-purple-dark grid">
+          <svg
+            class="card__pattern"
+            width="128"
+            height="64"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g fill="none" fill-rule="evenodd">
+              <circle
+                stroke="#F39E9E"
+                stroke-width="4"
+                cx="80"
+                cy="16"
+                r="14"
+              />
+              <circle
+                stroke-opacity=".5"
+                stroke="#F39E9E"
+                stroke-width="4"
+                cx="48"
+                cy="16"
+                r="14"
+              />
+              <circle
+                stroke-opacity=".25"
+                stroke="#F39E9E"
+                stroke-width="4"
+                cx="16"
+                cy="16"
+                r="14"
+              />
+              <circle
+                stroke="#FFF7F0"
+                stroke-width="4"
+                cx="112"
+                cy="16"
+                r="14"
+              />
+              <path fill="#F39E9E" d="M128 64 96 32v32z" />
+              <rect
+                fill="#F6A560"
+                x="32"
+                y="32"
+                width="64"
+                height="32"
+                rx="16"
+              />
+              <path
+                d="M0 50v-4h8v4H0Zm28 0v-4h8v4h-8Zm28 0v-4h8v4h-8Z"
+                fill="#FFF7F0"
+              />
+            </g>
+          </svg>
+          <span class="card__title | text-clr-white fw-700 fs-600"
+            >Motion Graphics</span
+          >
+        </div>
+      </section>
 
-  I’m Amy, and I’d love to work on your next project
+      <section class="section-about | container grid">
+        <img class="about__image" src="assets/image-amy.webp" />
+        <div class="about__content">
+          <h2 class="about__title | fs-800 center">
+            I’m Amy, and I’d love to work on your next project
+          </h2>
+          <p class="about__text | text-clr-grey center fs-500">
+            I love working with others to create beautiful design solutions.
+            I’ve designed everything from brand illustrations to complete mobile
+            apps. I’m also handy with a camera!
+          </p>
+          <a href="#" class="btn-cta | btn-primary btn-primary--pink"
+            >Free Consultation</a
+          >
+        </div>
+      </section>
 
-  I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
-  to complete mobile apps. I’m also handy with a camera!
+      <section class="section-work">
+        <h3 class="work__title center">My Work</h3>
+        <div class="work__slider | flex">
+          <img src="assets/image-slide-1.jpg" />
+          <img src="assets/image-slide-2.jpg" />
+          <img src="assets/image-slide-3.jpg" />
+          <img src="assets/image-slide-4.jpg" />
+          <img src="assets/image-slide-5.jpg" />
+        </div>
+        <button class="btn-arrow btn-arrow--left"></button>
+        <button class="btn-arrow btn-arrow--right"></button>
+      </section>
+    </main>
 
-  Free Consultation
-
-  My Work
-
-  Book a call with me
-
-  I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
-  free consultation. Then we can move forward from there.
-
-  Free Consultation
-
-  Free Consultation
-
-</body>
+    <footer class="footer | container">
+      <div class="footer-box">
+        <h2 class="footer__title">Book a call with me</h2>
+        <p class="footer__text">
+          I’d love to have a chat to see how I can help you. The best first step
+          is for us to discuss your project during a free consultation. Then we
+          can move forward from there.
+        </p>
+      </div>
+      <svg
+        class="logo"
+        width="64"
+        height="64"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <g fill="none" fill-rule="evenodd">
+          <path fill="#030303" d="M0 0h64v64H0z" />
+          <circle stroke="#FFF7F0" stroke-width="4" cx="32" cy="32" r="14" />
+        </g>
+      </svg>
+      <a href="#" class="btn-cta | btn-primary btn-primary--black"
+        >Free consultation</a
+      >
+    </footer>
+  </body>
 </html>
