feature: finished version 1.0. of the project (without slider)

--- a/Single Page Design Portfolio/index.html
+++ b/Single Page Design Portfolio/index.html
@@ -21,6 +21,7 @@
     />
 
     <link rel="stylesheet" href="dist/style.css" />
+  
   </head>
   <body class="body | bg-clr-beige fw-500">
     <header class="header | container flex">
@@ -44,7 +45,7 @@
         <h1 class="slogan__title | fs-900 fw-700">
           Design solutions made easy
         </h1>
-        <p class="slogan__text | text-clr-grey fw-500">
+        <p class="slogan__text | text-clr-grey fs-500 fw-500">
           With over ten years of experience in various design disciplines, I’m
           your one-stop shop for your design needs.
         </p>
@@ -324,9 +325,9 @@
         </div>
       </section>
 
-      <section class="about | container grid">
+      <section class="about | container grid" style="--gap: 0">
         <img class="image-avatar" src="assets/image-amy.webp" />
-        <div class="about__content">
+        <div class="about__content flow" style="--flow-gap: 1.5rem">
           <h2 class="about__title | fs-800 fw-700">
             I’m Amy, and I’d love to work on your next project
           </h2>
@@ -344,12 +345,12 @@
       <section class="work">
         <h3 class="work__title | center fs-700 fw-700 ">My Work</h3>
         <div class="slider | flex">
-          <img class="slider__img" src="assets/image-slide-1.jpg" />
           <img class="slider__img" src="assets/image-slide-2.jpg" />
           <img class="slider__img" src="assets/image-slide-3.jpg" />
           <img class="slider__img" src="assets/image-slide-4.jpg" />
-          <img class="slider__img" src="assets/image-slide-5.jpg" />
         </div>
+     
+       
         <div class="work__buttons">
           <button class="btn-arrow--left">
             <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path fill="#FFF" d="M8 0 0 8l8 8 1.687-1.687-5.121-5.12h10.241V6.807H4.566l5.121-5.12z"/></svg>
